[tool.poetry]
name = "RamConvert"
version = "0.9.9"
description = "RamConvert is a YouTube MP3 Audio Downloader that only Requires a YouTube Video URL. RamConvert is powered by Youtube_dl."
authors = ["AriesTropixDev"]

[tool.poetry.dependencies]
python = "^3.8"
youtube-dl = "^2021.12.17"
bs4 = "^0.0.1"
prettytable = "^2.1.0"
pyfiglet = "^0.8.post1"
termcolor = "^1.1.0"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
